Fix loading screen height on mobile

--- a/app/less/default/core/variables.less
+++ b/app/less/default/core/variables.less
@@ -276,5 +276,6 @@
 //
 //##
 
-@loading-screen-bg:             @body-bg;
-@loading-screen-position-top:   @header-height;
+@loading-screen-bg:                @body-bg;
+@loading-screen-position-top:      @header-height;
+@loading-screen-position-top-xs:   @header-height-xs;
